# compcon-TDT4205

./: .gitignore  README.md
ps1/src/: driver.c  table.c
ps1/testing/expected/: 6-mixed_err.txt
ps1/testing/tests/: 6-mixed_err.txt
ps2/src/: parser.y  scanner.l  tree.c  tree.h  vslc.c  vslc.h
ps2/vsl_programs/: Makefile
ps3/: CMakeLists.txt
ps3/src/: parser.y  tree.c  tree.h  vslc.c
ps3/vsl_programs/: Makefile
ps4/src/: symbols.c
ps5/asl/examples/: CMakeLists.txt
ps5/asl/examples/src/: arrays.S
ps5/asl/task/: CMakeLists.txt
ps5/asl/task/src/: modulo.S
ps5/vslc/src/: generator.c
ps5/vslc/vsl_programs/: Makefile
ps5/vslc/vsl_programs/ps5-codegen1/: arrays.S  arrays.out  callframes.S  callframes.out  comparisons.out  everything.S  everything.out  globals.out  locals.S  locals.out  many-params.S  many-params.out  math.out  simple-array.out  simple-call.S  simple-call.out  simple-locals.out  simple-parameters.S  simple-parameters.out  simple-print.S  simple-print.out
ps6/src/: generator.c
ps6/vsl_programs/ps5-codegen1/: arrays.out  callframes.out  comparisons.S  comparisons.out  everything.out  globals.S  globals.out  locals.out  many-params.out  math.S  math.out  simple-array.S  simple-array.out  simple-call.out  simple-locals.S  simple-locals.out  simple-parameters.out  simple-print.out
